@@ -140,7 +140,7 @@ stm <- function(documents, vocab, K,
                    topicreportevery=reportevery,
                    convergence=list(max.em.its=max.em.its, em.converge.thresh=emtol),
                    covariates=list(X=xmat, betaindex=betaindex, yvarlevels=yvarlevels),
-                   gamma=list(mode=match.arg(gamma.prior), prior=NULL, enet=1),
+                   gamma=list(mode=match.arg(gamma.prior), prior=NULL, enet=1, ic.k=2),
                    sigma=list(prior=sigma.prior),
                    kappa=list(LDAbeta=LDAbeta, interactions=interactions, 
                               fixedintercept=TRUE, mstep=list(tol=.001, maxit=3),
@@ -180,7 +180,8 @@ stm <- function(documents, vocab, K,
   #Full List of legal extra arguments
   legalargs <-  c("tau.maxit", "tau.tol", 
                   "fixedintercept","kappa.mstepmaxit", "kappa.msteptol", 
-                  "kappa.enet", "nlambda", "lambda.min.ratio", "ic.k", "gamma.enet",
+                  "kappa.enet", "nlambda", "lambda.min.ratio", "ic.k", "gamma.enet", 
+                  "gamma.ic.k",
                   "nits", "burnin", "alpha", "eta", "contrast",
                   "rp.s", "rp.p", "rp.d.group.size", "SpectralRP",
                   "recoverEG")
@@ -201,6 +202,7 @@ stm <- function(documents, vocab, K,
       if(i=="lambda.min.ratio") settings$tau$lambda.min.ratio <- control[[i]]
       if(i=="ic.k") settings$tau$ic.k <- control[[i]]
       if(i=="gamma.enet") settings$gamma$enet <- control[[i]]
+      if(i=="gamma.ic.k") settings$gamma$ic.k <- control[[i]]
       if(i=="nits") settings$init$nits <- control[[i]]
       if(i=="burnin") settings$init$burnin <- control[[i]]
       if(i=="alpha") settings$init$alpha <- control[[i]]
