@@ -111,6 +111,7 @@ The \code{control} argument is a list with named components which can be used to
     \item{\code{fixedintercept}}{a logical indicating whether in content covariate models the intercept should be fixed to the background distribution.  TRUE by default. This only applies when kappa.prior is set to L1.  If FALSE the intercept is estimated from the data without penalty.  In practice estimated intercepts often push term probabilities to zero, resulting in topics that look more like those in a Dirichlet model- that is, most terms have approximately zero probability with some terms with high probability.}
     \item{\code{kappa.enet}}{When using the L1 mode for content covariates this controls the elastic net mixing parameter.  See the argument \code{alpha} in \code{glmnet}.  Value must be between 1 and 0 where 1 is the lasso penalty (the default) and 0 is the ridge penalty.  The closer the parameter is to zero the less sparse the solution will tend to be.}
     \item{\code{gamma.enet}}{Controls the elastic net mixing parameter for the prevalence covariates.  See above for a description.}
+    \item{\code{gamma.ic.k}}{For L1 mode prevalence covariates this controls the selection of the regularization parameter.  We use a generic information criterion which penalizes complexity by the parameter \code{ic.k}.  When set to 2 (as by default) this results in AIC.  When set to log(n) (where n is the total number of documents in the corpus) this is equivalent to BIC.  Larger numbers will express a preference for sparser (simpler) models.}
     \item{\code{nlambda}}{Controls the length of the regularization path when using L1 mode for content covariates.  Defaults to 500.  Note that glmnet relies heavily on warm starts and so a high number will often (counter-intuitively) be less costly than a low number.  We have chosen a higher default here than the default in the glmnet package and we don't recommend changing it.}
     \item{\code{lambda.min.ratio}}{For L1 mode content covariates this controls the explored path of regularization values.  This defaults to .0001.  Setting higher numbers will result in more sparse solutions.  This is here primarily for dealing with convergence issues, if you want to favor selection of sparser solutions see the next argument.}
     \item{\code{ic.k}}{For L1 mode content covariates this controls the selection of the regularization parameter.  We use a generic information criterion which penalizes complexity by the parameter \code{ic.k}.  When set to 2 (as by default) this results in AIC.  When set to log(n) (where n is the total number of words in the corpus) this is equivalent to BIC.  Larger numbers will express a preference for sparser (simpler) models.}
